2rd final version

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/com/filetool/main/Main.java=UTF-8
 encoding//src/com/routesearch/route/Route.java=UTF-8
