--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,6 @@
-target/
-*.class
+Debug/
+test-case/
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.ear
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-/bin/
-/test-case/
+*.depend
+*.cdp
+*.layout
